src/component/multi_progress/snapshots/envision__component__multi_progress__snapshot_tests__snapshot_completed_and_failed.snap
---
source: src/component/multi_progress/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Tasks───────────────────────────────────────────┐
│✓ Compile 100% █████████████████████████████    │
│● Lint  75% ████████████████████████░░░░░░░░    │
│✗ Deploy  Error: Timeout                        │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
