src/component/multi_progress/snapshots/envision__component__multi_progress__snapshot_tests__snapshot_disabled.snap
---
source: src/component/multi_progress/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Disabled────────────────────────────────────────┐
│○ Item X   0% ░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░    │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
