src/component/multi_progress/snapshots/envision__component__multi_progress__snapshot_tests__snapshot_with_items.snap
---
source: src/component/multi_progress/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌Downloads───────────────────────────────────────┐
│○ Document.pdf   0% ░░░░░░░░░░░░░░░░░░░░░░░░    │
│○ Image.png   0% ░░░░░░░░░░░░░░░░░░░░░░░░░░░    │
│○ Archive.zip   0% ░░░░░░░░░░░░░░░░░░░░░░░░░    │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
