src/component/multi_progress/snapshots/envision__component__multi_progress__snapshot_tests__snapshot_without_percentages.snap
---
source: src/component/multi_progress/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────────────────────────┐
│○ Task A                                        │
│○ Task B                                        │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
