src/component/multi_progress/snapshots/envision__component__multi_progress__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/multi_progress/snapshot_tests.rs
expression: terminal.backend().to_string()
---
○ Document.pdf   0% ░░░░░░░░░░░░░░░░    
○ Image.png   0% ░░░░░░░░░░░░░░░░░░░
